fix(filter-multi-select): use spacing-xs between children and chevron

--- a/packages/select/src/FilterMultiSelect/components/Trigger/_mixins.scss
+++ b/packages/select/src/FilterMultiSelect/components/Trigger/_mixins.scss
@@ -40,7 +40,6 @@
   }
 
   display: inline-flex;
-  gap: $spacing-sm;
   align-items: center;
 
   .iconWrapper {
